# alumnx-vector-db

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LOCAL_SETUP.md  README.md  config.py  config.yaml  deploy.sh  docker-compose.yml  docker_setup.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: claude-code-review.yml  deploy-dev.yml  deploy-prod.yml  pr-validation.yml  sync_log.txt
app/: __init__.py  config.py  main.py  models.py
app/routers/: candidates.py  documents.py  knowledgebases.py
app/services/: __init__.py  document_registry.py  document_storage.py  ingestion.py  llm_parser.py  llm_query.py  retrieval_service.py
app/services/embedding/: embedder.py
app/services/retrieval/: base.py  knn.py
app/services/store/: duplicate_checker.py  postgres_store.py  vector_file_store.py
tests/: conftest.py  helpers.py  test_api.py  test_duplicate_checker.py  test_ingestion.py  test_knn.py  test_retrieval.py  test_store.py
