[project]
name = "nexvec"
version = "1.3.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "google-genai>=1.0",
    "nltk>=3.8",
    "numpy>=1.26",
    "pdfplumber>=0.11",
    "pydantic>=2.6",
    "pytest>=8.0",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.27",
    "python-multipart",
    "psycopg2-binary>=2.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
